# DataScience

./: DS_HW_2.ipynb  DS_HW_3.ipynb  DS_HW_5.ipynb  DS_HW_6.ipynb  DS_HW_7.ipynb  DS_HW_9.ipynb  HW_11.ipynb  pyproject.toml
.devcontainer/: devcontainer.json
HW1/: DS_HW_01.ipynb  pyproject.toml
HW2/: DS_HW_2_1.ipynb  DS_HW_2_2.ipynb  DS_HW_2_3.ipynb
HW2/data/: finally_data.csv
HW3/: DS_HW_3.ipynb
HW_10/: DS_HW_10.ipynb
HW_12/: DS_HW_12.ipynb
HW_13/: DS_HW_10.ipynb  DS_HW_13.py
HW_14/: DS_HW_14.ipynb
HW_15/: DS_HW_15.ipynb
HW_16/: DS_HW_16.py
HW_2/: DS_HW_2.1.ipynb  DS_HW_2.2.ipynb  DS_HW_2.3.ipynb
HW_3/: DS_HW_3.ipynb
HW_4/: DS_HW_4.ipynb
HW_8/: DS_HW_8.ipynb
HW_9/: DS_HW_9.ipynb
