[tool.poetry]
name = "hw1"
version = "0.1.0"
description = ""
authors = ["Kagev <kaplitskiygv@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
scikit-surprise = "^1.1.4"
jupyterlab = "^4.2.5"
notebook = "^7.2.2"
pandas = "^2.2.3"
surprise = "^0.1"
numpy = "1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
