[tool.poetry]
name = "hw1"
version = "0.1.0"
description = ""
authors = ["Kagev <kaplitskiygv@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
scikit-surprise = "^1.1.4"
jupyterlab = "^4.2.5"
notebook = "^7.2.2"
pandas = "^2.2.3"
surprise = "^0.1"
numpy = "1.26.4"
tensorflow = "^2.18.0"
keras = "^3.7.0"
scikit-learn = "^1.5.2"
scikit-image = "^0.24.0"
opencv-python = "^4.10.0.84"
opencv-python-headless = "^4.10.0.84"
streamlit = "^1.40.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
